[package]
name = "hcp-loadgen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prometheus = "0.13"
csv = "1"
hdrhistogram = "7"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
cosmos-sdk-proto = { version = "0.27.0", features = ["default", "grpc"] }
tonic = "0.13"
prost = "0.13"
futures = "0.3"
axum = "0.7"
